# cargo-force-build

./: Cargo.toml
src/: main.rs
