[package]
name = "cargo-force-build"
version = "0.1.0"
edition = "2018"
authors = ["CATS <Aurelien.Couthures@gmail.com>"]
description = "CATS's"
readme = "README.md"
repository = "https://github.com/CoAuToSe/cargo-force-build"
homepage = "https://github.com/CoAuToSe/cargo-force-build"
documentation = "https://docs.rs/cargo-force-build"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
